# apps/api/src/controllers/v2/feedback/request-input.ts
@@ -7,7 +7,7 @@ export function toFeedbackInput(
   return {
     rating: body.rating,
     valuableSources: body.valuableSources,
-    valuableResultPositions: body.valuableResultPositions,
+    valuableResults: body.valuableResults,
     missingContent: body.missingContent,
     querySuggestions: body.querySuggestions,
     origin: body.origin,
